# jakecrossman

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  COMPLETE_SEO_VERIFICATION_2025.md  Dockerfile  FAVICON_INSTRUCTIONS.md  FINAL_SEO_ANALYSIS_2025.md  IMAGE_OPTIMIZATION_GUIDE.md  LICENSE  README.md  SEO_COMPLETION_REPORT.md  SEO_IMPLEMENTATION_GUIDE.md  SEO_IMPLEMENTATION_SUMMARY.md  UNION_STATUS_CORRECTION.md  audio-troubleshooting.md  convert_images_to_webp.py  docker-compose.yml  image_optimization.py  mypy.ini  pyproject.toml  requirements.txt  seo_config.env  seo_tester.py  video-optimization-commands.md  video-thumbnail-commands.md  wsgi.py
.github/workflows/: ci.yml  precommit.yml  pytest.yml
app/: __init__.py  content_loader.py  email_utils.py  seo.py
app/forms/: __init__.py
app/main/: __init__.py  routes.py
app/static/: robots.txt
app/static/css/: main.css  seo-enhancements.css
app/static/favicon/: browserconfig.xml  site.webmanifest
app/static/images/optimized/: USAGE_EXAMPLES.md
app/static/js/: main.js  sw.js
app/templates/: 404.html  about.html  base.html  contact.html  gallery.html  index.html  macros.html  news.html  reel.html  resume.html
app/templates/email/: contact_email.html
content/gallery/: headshot-1.md  headshot-2.md
content/news/: audition-success.md  balancing-media.md  continue-to-win.md  erie-award.md  espn-fuse.md  expanding-digital-presence.md  f1-movie.md  liberty-fuse-launch.md  new-projects-coming-soon.md  tiktok-milestone.md  training-update.md
nginx/: default.conf
tests/: conftest.py  test_content_loader.py  test_email_utils.py  test_image_optimization.py  test_routes.py  test_seo.py
