[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakecrossman-portfolio"
version = "1.0.0"
description = "Personal portfolio website for Jake Crossman"
authors = [{name = "Jake Crossman"}]
dependencies = [
    "Flask==2.3.3",
    "gunicorn==21.2.0",
    "Flask-WTF==1.2.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "black==23.9.1",
    "flake8==6.1.0",
    "pre-commit==3.4.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"