[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakecrossman-portfolio"
version = "1.0.0"
description = "Personal portfolio website for Jake Crossman"
authors = [{name = "Jake Crossman"}]
dependencies = [
    "Flask-WTF==1.2.2",
    "Flask==3.1.1",
    "Flask-Caching==2.1.0",
    "gunicorn==23.0.0",
    "requests==2.32.4",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "python-dotenv==1.1.0",
    "Pillow==11.2.1",
    "Markdown==3.6",

]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black==25.1.0",
    "flake8==7.2.0",
    "pre-commit==4.2.0",
    "mypy==1.10.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
